@@ -8,8 +8,8 @@ import java.util.stream.Collectors;
 public class MapExample {
     public static void main(String[] args) {
         List<String> G7 = Arrays.asList("USA", "Japan", "France", "Germany", "Italy", "U.K.", "Canada");
-        List<String> newList = Collections.singletonList(G7.stream()
-                .map(x -> x.toUpperCase())
+        List<String> newList = List.of(G7.stream()
+                .map(String::toUpperCase)
                 .collect(Collectors.joining(", ")));
 
         System.out.printf("List %s  Upper Case List %s ", G7, newList);
